syntax = "proto3";
package gordian.core.app;

option go_package = "cosmossdk.io/core/app";

// This is just the shell of cometbft abci types as a hacky work around
// This allows the native types of the RPC
// to be used without having to import the entire cometbft package to our proto

message TxResult {}
